creamos el servlet FormularioOculto, modificamos el servlet FormularioTrabajo añadimos los enlaces necesarios y corregimos errores de los servlet CicloVida, ParametrosIniciales y CabecerasPeticion

--- a/web/CSS/cssFormulario.css
+++ b/web/CSS/cssFormulario.css
@@ -19,6 +19,24 @@ and open the template in the editor.
     float:left;
 }
 
+#datosAcces{
+    background-color:#F8FFCC;
+    width:70%;
+    float:left;
+}
+
+#infoGeneral{
+    background-color:#F8FFCC;
+    width:70%;
+    float:left;
+}
+
+#preferencias{
+    background-color:#F8FFCC;
+    width:70%;
+    float:left;
+}
+
 #otrosDatos{
     background-color:#F8FFCC;
     width:70%;
